# sgr

./: Cargo.toml
sgr_component/: Cargo.toml
sgr_component/src/: component.rs  lib.rs
sgr_component/src/contrib/: files.rs
sgr_derive/: Cargo.toml
sgr_derive/src/: a.txt  lib.rs
sgr_runtime/: Cargo.toml
sgr_runtime/src/: component.rs  lib.rs
sgr_runtime/src/contrib/: files.rs  mod.rs
src/: main.rs
src/adaptors/: mod.rs
src/adaptors/configurator/: file.rs
src/app/: app.rs  component.rs  mod.rs
src/bootstrap/: engine.rs  grpc.rs  mod.rs
src/ports/component/: component.rs  config.rs  mod.rs
